--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
-NEXT_PUBLIC_API_URLA=https://pgshopadmin.shop/mypgphone.shop
+NEXT_PUBLIC_API_URLA=https://pgshopadmin.shop/pgphonethai.online
 
 
-NEXT_PUBLIC_NAME=My PG Phone
+NEXT_PUBLIC_NAME=MyPGPhone
 
-NEXT_PUBLIC_SITE_URL=https://mypgphone.shop
+NEXT_PUBLIC_SITE_URL=https://www.pgphonethai.online
 NEXT_PUBLIC_BRAND_LOGO=/logo.png
 
 # —— Contacts ——
